# scientific-codebase-rag

./: .gitignore  README.md
citizen-science-rag/: README.md
codebase-rag/: .gitignore  README.md  SETUP.md  conftest.py  pyproject.toml
codebase-rag/data/: math_terms.json
codebase-rag/kernelpack_rag/: __main__.py  config.py  ingest.py  ingest_readme.py  mcp_server.py  qdrant_utils.py  qlog.py  query.py  rerank.py  retrieve.py  schema.py  tokenizer.py  verify.py
codebase-rag/kernelpack_rag/chunking/: coarse.py  fine.py  header.py  metadata.py  papers.py
codebase-rag/kernelpack_rag/embed/: base.py  jinacode.py  qwen.py  representations.py  sparse.py  unixcoder.py
codebase-rag/kernelpack_rag/enrich/: summarize.py
codebase-rag/kernelpack_rag/papers/: rbf_kernel_table.json  rbf_kernel_table.md
codebase-rag/notebooks/: 04_pipeline_inspection.ipynb  05_execution_eval_baseline.ipynb  pipeline_smoke_test.ipynb
codebase-rag/scripts/: eval_mcq.py  eval_mcq_agent.py  run_summarize.py  translate_retrieval_log.py
codebase-rag/tests/: test_coarse.py  test_embed.py  test_eval_mcq_agent.py  test_fine.py  test_header.py  test_ingest_readme.py  test_metadata.py  test_papers.py  test_qlog.py  test_retrieve.py  test_schema.py  test_sparse.py  test_summarize.py  test_tokenizer.py
experiments/: 01_naive_to_hybrid.ipynb  02_eval_baseline.ipynb  02_eval_baseline_bm25_failure.ipynb  02a_eval_bm25_mangling.ipynb  02b_eval_baseline.ipynb  03_qdrant_migration.ipynb  04_generation_baseline.ipynb  README.md
experiments/metadata/: solvers_summaries.json
(+5 files in other folders)
