[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelpack-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "openai",
    "qdrant-client",
    "python-dotenv",
    "tqdm",
    "torch",
    "transformers",
    "sentence-transformers",
    "tree-sitter",
    "tree-sitter-python",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kernelpack_rag*"]